feat: реализация feature 2.5 - интеграция Yandex Object Storage
Заменен локальный MinIO на Yandex Object Storage
Добавлены PowerShell скрипты для настройки Yandex Cloud CLI и создания S3 бакета
Обновлена документация (yc-cli-setup.md, yandex-s3-setup.md)
Обновлен docker-compose.yml (отключен MinIO)
Обновлен s3_storage.py для работы с Yandex Object Storage
Добавлена lifecycle policy для автоматической очистки файлов
Удалены устаревшие скрипты init_minio.py и init_minio.sh
Обновлены спецификации и документация

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,24 @@
 services:
-  # Эмулятор S3 (Object Storage)
-  minio:
-    image: minio/minio
-    container_name: minio
-    ports:
-      - "9000:9000"  # API
-      - "9001:9001"  # Консоль управления
-    environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
-    command: server /data --console-address ":9001"
-    volumes:
-      - minio_data:/data
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+  # Эмулятор S3 (Object Storage) - ОТКЛЮЧЕН
+  # MinIO отключен в пользу Yandex Object Storage (feature-2.5)
+  # Для использования MinIO раскомментируйте сервис ниже и добавьте зависимость в сервис app
+  # minio:
+  #   image: minio/minio
+  #   container_name: minio
+  #   ports:
+  #     - "9000:9000"  # API
+  #     - "9001:9001"  # Консоль управления
+  #   environment:
+  #     MINIO_ROOT_USER: minioadmin
+  #     MINIO_ROOT_PASSWORD: minioadmin
+  #   command: server /data --console-address ":9001"
+  #   volumes:
+  #     - minio_data:/data
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+  #     interval: 30s
+  #     timeout: 20s
+  #     retries: 3
 
   # Mock Replicate эмулятор (запускается первым, т.к. app зависит от него)
   mock-replicate:
@@ -32,11 +34,11 @@ services:
       sh -c "pip install --no-cache-dir fastapi uvicorn httpx requests Pillow &&
              uvicorn mock_replicate:app --host 0.0.0.0 --port 8001"
     healthcheck:
-      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8001/health').read()"]
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8001/health', timeout=3).read()"]
       interval: 15s
       timeout: 10s
       retries: 10
-      start_period: 180s
+      start_period: 300s
 
   # FastAPI приложение (основной бот)
   app:
@@ -46,8 +48,8 @@ services:
       - "8000:8000"
     env_file: .env
     depends_on:
-      minio:
-        condition: service_healthy
+      # minio:  # Отключено в пользу Yandex Object Storage (feature-2.5)
+      #   condition: service_healthy
       mock-replicate:
         condition: service_healthy
     volumes:
@@ -56,5 +58,5 @@ services:
       - ./.cursor:/app/.cursor
     command: uvicorn src.app:app --host 0.0.0.0 --port 8000 --reload
 
-volumes:
-  minio_data:
+# volumes:
+#   minio_data:  # Отключено в пользу Yandex Object Storage (feature-2.5)
