--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
 
   # Mock Replicate эмулятор (запускается первым, т.к. app зависит от него)
   mock-replicate:
+    profiles: ["mock"]
     image: python:3.9-slim
     container_name: mock-replicate
     working_dir: /app
@@ -47,11 +48,6 @@ services:
     ports:
       - "8000:8000"
     env_file: .env
-    depends_on:
-      # minio:  # Отключено в пользу Yandex Object Storage (feature-2.5)
-      #   condition: service_healthy
-      mock-replicate:
-        condition: service_healthy
     volumes:
       - ./src:/app/src
       - ./mock_replicate.py:/app/mock_replicate.py
